<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.conor.whichprep.PreQuiz">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/answerSuggestions"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:background="#34495e"
        android:paddingTop="5dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="99dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView4"
        android:textAlignment="center"
        android:background="#34495e"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:paddingTop="5dp"
        android:text="@string/testLevel" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/startQuizBtn"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="startQuiz" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timePerQ"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:background="#34495e"
        android:paddingTop="5dp"
        android:layout_marginTop="105dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_marginTop="35dp"
        android:paddingTop="10px"
        android:paddingBottom="10px"
        android:minHeight="10dp"
        android:maxHeight="10dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/timer"
        android:id="@+id/timer"
        android:layout_below="@+id/seekBar"
        android:layout_alignRight="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:layout_marginBottom="30dp">



        <RadioButton
            android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/level1"
            android:checked="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <RadioButton
            android:id="@+id/level2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/level2"
            android:checked="false"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <RadioButton
            android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/level3"
            android:checked="false"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <RadioButton
            android:id="@+id/level4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/level4"
            android:checked="false"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />
    </RadioGroup>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:checked="true" />

</RelativeLayout>
