<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.conor.whichprep.HomeActivity">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/quiz_icon"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/quizButton"
        android:longClickable="false"
        android:onClick="startPreQuiz"
        android:contentDescription="@string/quizButton"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/quizText"
        android:id="@+id/quizText"
        android:layout_below="@+id/quizButton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/stats_icon"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/imageButton3"
        android:onClick="startStats"
        android:contentDescription="@string/statButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/quizText"
        android:layout_alignLeft="@+id/aboutButton"
        android:layout_alignStart="@+id/aboutButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/statText"
        android:id="@+id/statsText"
        android:layout_below="@+id/imageButton3"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/about_icon"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/aboutButton"
        android:layout_marginTop="25dp"
        android:onClick="startAbout"
        android:contentDescription="@string/aboutButton"
        android:layout_below="@+id/statsText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/aboutBtnText"
        android:id="@+id/aboutText"
        android:layout_below="@+id/aboutButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
